# janusgraphy

./: .gitignore  README.md  pyproject.toml
janusgraphy/: __init__.py  graph_object.py  gremlin_python_interface.py  helpers.py  query.py  traversal.py
janusgraphy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_janusgraphy.py
