[tool.poetry]
name = "janusgraphy"
version = "0.1.0"
description = ""
authors = ["Victor Marcelino <victor.fmarcelino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gremlinpython = "3.2.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
